--- a/HomeworkProject01/ProblemMaker/ProblemMaker.csproj
+++ b/HomeworkProject01/ProblemMaker/ProblemMaker.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="WPF-UI" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
