--- a/HomeworkProject05/PhoneNumberCrawler/PhoneNumberCrawler.csproj
+++ b/HomeworkProject05/PhoneNumberCrawler/PhoneNumberCrawler.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PhoneNumberCrawler.Shared\PhoneNumberCrawler.Shared.csproj" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
