美化UI；修改README；修复删除阻止BUG

--- a/HomeworkProject06/StudentManagemantSystem/StudentManagemantSystem.csproj
+++ b/HomeworkProject06/StudentManagemantSystem/StudentManagemantSystem.csproj
@@ -5,7 +5,19 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>SCHALE-logo.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Assets\SCHALE-logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\SCHALE-logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SCHALE-logo.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
